--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "cors": "^2.8.5",
+    "engines": {
+      "node": "10.16.0",
+      "npm": "6.9.0"
+    },
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
-    "engines": {
-      "npm": "6.9.0",
-      "node": "10.16.0"
-    },
     "uuid": "^3.3.2"
   },
   "scripts": {
